# ml-reentry-torch

./: .gitignore  .pre-commit-config.yaml  claude.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup-claude.sh
docs/: canal.md  dispatch-compilation-delta.md
exp/compiler/: break_sweep.py  custom_ops.md  custom_ops.py  demo.py  graph_break.md  graph_break.py  llama.py  passes.md  passes.py
exp/dispatch/: dispatch_compile_diff.py  dispatch_vtable.py
shared/: models.py
shared/custom_ops/: __init__.py  ops.cpp  register.py  test_custom_op.py
shared/models/: __init__.py  catalog.py  common.py  compiler_models.py
tools/canal/: __init__.py  __main__.py  collectors.py  config.py  dsl.py  render.py  runner.py  test_canal.py  types.py
tools/canal/analyzers/: __init__.py  base.py  breaks.py  codegen.py  fusion.py  fx.py  ir.py  passes.py
tools/canal/view/: __init__.py  __main__.py
tools/tracer/: __init__.py  __main__.py  test_tracer.py  tracer.py
